[metadata]
name = hfb
description = A configurable HTTP Framework Benchmark Runner
description-file = README.md
author = Harsha Narayana
author-email = harsha2k4@gmail.com
license = MIT
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python

